Add insights Get Most Uased machines api
